Remove blank cells

--- a/timeseries_python.ipynb
+++ b/timeseries_python.ipynb
@@ -11,9 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/apple/.pyenv/versions/3.6.2/lib/python3.6/importlib/_bootstrap.py:205: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/apple/.pyenv/versions/3.6.2/lib/python3.6/importlib/_bootstrap.py:205: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -43,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,30 +83,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'id': 'NATURALGAS',\n",
-       " 'realtime_start': '2018-09-15',\n",
-       " 'realtime_end': '2018-09-15',\n",
+       " 'realtime_start': '2019-03-25',\n",
+       " 'realtime_end': '2019-03-25',\n",
        " 'title': 'Natural Gas Consumption',\n",
        " 'observation_start': '2000-01-01',\n",
-       " 'observation_end': '2018-06-01',\n",
+       " 'observation_end': '2019-01-01',\n",
        " 'frequency': 'Monthly',\n",
        " 'frequency_short': 'M',\n",
        " 'units': 'Billion Cubic Feet',\n",
        " 'units_short': 'Bil. Cubic Feet',\n",
        " 'seasonal_adjustment': 'Not Seasonally Adjusted',\n",
        " 'seasonal_adjustment_short': 'NSA',\n",
-       " 'last_updated': '2018-08-20 09:51:02-05',\n",
-       " 'popularity': 25,\n",
+       " 'last_updated': '2019-03-20 12:07:02-05',\n",
+       " 'popularity': 28,\n",
        " 'notes': 'This data is collected by the U.S. Energy Information Administration (EIA) available at: http://www.eia.gov/dnav/ng/hist/n9140us2m.htm and  http://www.eia.doe.gov/emeu/steo/pub/contents.html (forecast).'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,6 +560,13 @@
     "How to Tune ARIMA Parameters in Python  \n",
     "https://machinelearningmastery.com/tune-arima-parameters-python/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1038,13 +1056,6 @@
    "source": [
     "prophet_fig2 = m.plot_components(prophet_forecast);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
