--- a/timeseries_r.ipynb
+++ b/timeseries_r.ipynb
@@ -1120,18 +1120,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "ARIMA modelling in R\n",
+    "https://otexts.org/fpp2/arima-r.html"
+   ]
   }
  ],
  "metadata": {
